make Tab interactive; fix wrapping

--- a/src/components/NFT/NFT.module.scss
+++ b/src/components/NFT/NFT.module.scss
@@ -60,20 +60,10 @@
   }
 }
 
-.topBar {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 24px;
-}
-
 .ownedBy {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-
-  @include desktop-lower {
-    align-self: flex-start;
-  }
 
   p {
     font-family: Raleway;
@@ -99,26 +89,33 @@
 .right {
   display: flex;
   align-items: center;
-  margin-left: 10px;
+  flex-wrap: wrap;
+  margin-top: -10px;
 
-  @include desktop-lower {
-    margin: 20px 0 0 0;
+  @media (max-width: 1414px) {
+    margin-top: 20px;
   }
 }
 
 .data {
   display: flex;
   align-items: center;
+  margin-top: 24px;
 
-  @include desktop-lower {
+  @media (max-width: 1414px) {
     flex-direction: column;
+    align-items: flex-start;
   }
 }
 
 .rarityScore {
   display: flex;
-  flex-wrap: wrap;
-  margin-right: 10px;
+  flex-wrap: nowrap;
+  margin: 0 10px 0 20px;
+
+  @media (max-width: 1414px) {
+    margin-left: 0;
+  }
 
   p {
     font-family: Raleway;
@@ -138,10 +135,32 @@
     color: $black;
     margin-left: 10px;
 
-    @include tablet-portrait-and-lower {
+    @media (max-width: 1414px) {
       margin: 0;
     }
   }
+}
+
+.tabContent {
+  margin-top: 40px;
+}
+
+.fakeTabContnet {
+  text-transform: uppercase;
+  padding: 30px;
+  border: 4px solid #af4cd7;
+  border-radius: 10px;
+
+  font-family: Syncopate;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 25px;
+  text-transform: uppercase;
+  color: $black;
+}
+
+.socials {
+  display: flex;
 }
 
 .socialCounter {
