--- a/src/components/NFT/components/Price/Price.module.scss
+++ b/src/components/NFT/components/Price/Price.module.scss
@@ -5,7 +5,6 @@
     #5f27cd 56.75%,
     #48dbfb 134.06%
   );
-  margin-top: 40px;
   padding: 3px;
   padding-top: 1px;
   border-radius: 14px;
