--- a/src/components/Tabs/Tabs.module.scss
+++ b/src/components/Tabs/Tabs.module.scss
@@ -29,7 +29,7 @@
   }
 
   @include tablet-landscape {
-    font-size: 1.2vw;
+    font-size: 1.4vw;
   }
 
   @include tablet-portrait-and-lower {
